--- a/index.html
+++ b/index.html
@@ -47,6 +47,109 @@
     });
 </script>
 
+<script type="text/javascript">
+    !function() {
+        var $ps_version = window.localStorage && localStorage.getItem("ps_version") || new  Date().getTime(),
+        $ps_head = document.getElementsByTagName("head")[0] || document.documentElement,$ps_base_url = '//abs.proxistore.com/',
+        $ps_script = document.createElement("script");
+        $ps_script.src = $ps_base_url+ 'scripts/ps-ut-draw.min.js?v=' + $ps_version,
+        $ps_script.async = true,
+        $ps_script.addEventListener && $ps_script.addEventListener("load",function() {
+            $ps.start({'baseUrl': $ps_base_url,'langCtx': 'fr/','publisherSpotParams': [{'publisherSpotId':  '72375808'},{'publisherSpotId':  '93443415'}]});
+    })
+    , $ps_head.insertBefore($ps_script,$ps_head.firstChild);
+  }();
+</script>
 
+
+<!-- BODY CODE -->
+
+<script>
+  if(window.localStorage) {
+    var $ps_publisherSpot = "72375808",
+    $ps_capping = JSON.parse(localStorage.getItem("ps_capping_" +  $ps_publisherSpot)) || {'view': -1},
+    $ps_exposure = JSON.parse(localStorage.getItem("ps_exposure_" +  $ps_publisherSpot)) || 0;
+    if($ps_exposure < $ps_capping.view) {
+      var $ps_now = new Date(),
+          $ps_ads = JSON.parse(localStorage.getItem("ps_ads_" +  $ps_publisherSpot)),
+          $ps_adsDateIndex = $ps_now.getFullYear().toString() + ($ps_now.getMonth() <  9?
+            '0'+($ps_now.getMonth()+1).toString()  
+            :
+            ($ps_now.getMonth()+1).toString())+($ps_now.getDate()<10 ? '0' + $ps_now.getDate() : $ps_now.getDate().toString()),
+          $ps_ads_now = $ps_ads && $ps_adsDateIndex in $ps_ads && $ps_ads[$ps_adsDateIndex].indexOf($ps_now.getHours()) >= 0;
+          if($ps_ads_now) {
+            adhese.registerRequestParameter('in',"prx-72375808");
+          }
+    }
+  }
+</script>
+<script>
+  if(window.localStorage) {
+    var $ps_publisherSpot = "93443415",
+    $ps_capping = JSON.parse(localStorage.getItem("ps_capping_" +  $ps_publisherSpot)) || {'view': -1},
+    $ps_exposure = JSON.parse(localStorage.getItem("ps_exposure_" +  $ps_publisherSpot)) || 0;
+    if($ps_exposure < $ps_capping.view) {
+      var $ps_now = new Date(),
+          $ps_ads = JSON.parse(localStorage.getItem("ps_ads_" +  $ps_publisherSpot)),
+          $ps_adsDateIndex = $ps_now.getFullYear().toString() + ($ps_now.getMonth() <  9?
+            '0'+($ps_now.getMonth()+1).toString()  
+            :
+            ($ps_now.getMonth()+1).toString())+($ps_now.getDate()<10 ? '0' + $ps_now.getDate() : $ps_now.getDate().toString()),
+          $ps_ads_now = $ps_ads && $ps_adsDateIndex in $ps_ads && $ps_ads[$ps_adsDateIndex].indexOf($ps_now.getHours()) >= 0;
+          if($ps_ads_now) {
+            adhese.registerRequestParameter('in',"prx-93443415");
+          }
+    }
+  }
+</script>
+
+<!-- CREATIVE TAGS -->
+
+<!-- HALF-PAGE -->
+
+    <div id="proxistore-72375808"></div>
+    <script>
+      !function() {
+        var  $ps_publisherSpot  =  72375808;
+        $ps_exposure  = JSON.parse(localStorage.getItem("ps_exposure_" +  $ps_publisherSpot));
+        if($ps_exposure  ==  null)  
+          JSON.parse(localStorage.getItem("ps_exposure_" +  $ps_publisherSpot,  0));
+        else
+          localStorage.setItem("ps_exposure_" +  $ps_publisherSpot,  $ps_exposure+1);
+        var  $ps_version = window.localStorage && localStorage.getItem("ps_version") || new Date().getTime(),
+        $ps_head  = document.getElementsByTagName("head")[0] || document.documentElement,
+        $ps_base_url = '//abs.proxistore.com/',
+        $ps_script  = document.createElement("script");
+        $ps_script.src =  $ps_base_url+  'scripts/ps-ut-box.min.js?v='  +  $ps_version,$ps_script.async =  true,
+        $ps_script.addEventListener && $ps_script.addEventListener("load",function() {
+          $ps.displayBox({'baseUrl':  $ps_base_url,'langCtx':  'fr/','publisherSpotId':  '72375808'});
+        }),
+        $ps_head.insertBefore($ps_script, $ps_head.firstChild);
+      }();
+    </script>
+
+    
+<!-- RECTANGLE -->
+
+    <div id="proxistore-93443415"></div>
+    <script>
+      !function() {
+        var  $ps_publisherSpot  =  93443415;
+        $ps_exposure  = JSON.parse(localStorage.getItem("ps_exposure_" +  $ps_publisherSpot));
+        if($ps_exposure  ==  null)  
+          JSON.parse(localStorage.getItem("ps_exposure_" +  $ps_publisherSpot,  0));
+        else
+          localStorage.setItem("ps_exposure_" +  $ps_publisherSpot,  $ps_exposure+1);
+        var  $ps_version = window.localStorage && localStorage.getItem("ps_version") || new Date().getTime(),
+        $ps_head  = document.getElementsByTagName("head")[0] || document.documentElement,
+        $ps_base_url = '//abs.proxistore.com/',
+        $ps_script  = document.createElement("script");
+        $ps_script.src =  $ps_base_url+  'scripts/ps-ut-box.min.js?v='  +  $ps_version,$ps_script.async =  true,
+        $ps_script.addEventListener && $ps_script.addEventListener("load",function() {
+          $ps.displayBox({'baseUrl':  $ps_base_url,'langCtx':  'fr/','publisherSpotId':  '93443415'});
+        }),
+        $ps_head.insertBefore($ps_script, $ps_head.firstChild);
+      }();
+    </script>
 </body>
 </html>
