--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <p></p>
 <div id="widget2"></div>
-<script>
+<!-- <script>
     function notification(event) {
         console.log("Notification", event);
     }
@@ -45,7 +45,7 @@
         shortWidgetIds: "widget1",
         geoLocationCallback: notification
     });
-</script>
+</script> -->
 
 <script type="text/javascript">
     !function() {
