--- a/index.html
+++ b/index.html
@@ -64,50 +64,11 @@
 
 <!-- BODY CODE -->
 
-<script>
-  if(window.localStorage) {
-    var $ps_publisherSpot = "39016141",
-    $ps_capping = JSON.parse(localStorage.getItem("ps_capping_" +  $ps_publisherSpot)) || {'view': -1},
-    $ps_exposure = JSON.parse(localStorage.getItem("ps_exposure_" +  $ps_publisherSpot)) || 0;
-    if($ps_exposure < $ps_capping.view) {
-      var $ps_now = new Date(),
-          $ps_ads = JSON.parse(localStorage.getItem("ps_ads_" +  $ps_publisherSpot)),
-          $ps_adsDateIndex = $ps_now.getFullYear().toString() + ($ps_now.getMonth() <  9?
-            '0'+($ps_now.getMonth()+1).toString()  
-            :
-            ($ps_now.getMonth()+1).toString())+($ps_now.getDate()<10 ? '0' + $ps_now.getDate() : $ps_now.getDate().toString()),
-          $ps_ads_now = $ps_ads && $ps_adsDateIndex in $ps_ads && $ps_ads[$ps_adsDateIndex].indexOf($ps_now.getHours()) >= 0;
-          if($ps_ads_now) {
-            adhese.registerRequestParameter('in',"prx-39016141");
-          }
-    }
-  }
-</script>
-<script>
-  if(window.localStorage) {
-    var $ps_publisherSpot = "93443415",
-    $ps_capping = JSON.parse(localStorage.getItem("ps_capping_" +  $ps_publisherSpot)) || {'view': -1},
-    $ps_exposure = JSON.parse(localStorage.getItem("ps_exposure_" +  $ps_publisherSpot)) || 0;
-    if($ps_exposure < $ps_capping.view) {
-      var $ps_now = new Date(),
-          $ps_ads = JSON.parse(localStorage.getItem("ps_ads_" +  $ps_publisherSpot)),
-          $ps_adsDateIndex = $ps_now.getFullYear().toString() + ($ps_now.getMonth() <  9?
-            '0'+($ps_now.getMonth()+1).toString()  
-            :
-            ($ps_now.getMonth()+1).toString())+($ps_now.getDate()<10 ? '0' + $ps_now.getDate() : $ps_now.getDate().toString()),
-          $ps_ads_now = $ps_ads && $ps_adsDateIndex in $ps_ads && $ps_ads[$ps_adsDateIndex].indexOf($ps_now.getHours()) >= 0;
-          if($ps_ads_now) {
-            adhese.registerRequestParameter('in',"prx-93443415");
-          }
-    }
-  }
-</script>
 
 <!-- CREATIVE TAGS -->
 
-<!-- HALF-PAGE -->
 
-    <div id="proxistore-39016141"></div>
+    <!-- <div id="proxistore-39016141"></div>
     <script>
       !function() {
         var  $ps_publisherSpot  =  39016141;
@@ -129,7 +90,6 @@
     </script>
 
     
-<!-- RECTANGLE -->
 
     <div id="proxistore-14439784"></div>
     <script>
@@ -150,6 +110,6 @@
         }),
         $ps_head.insertBefore($ps_script, $ps_head.firstChild);
       }();
-    </script>
+    </script> -->
 </body>
 </html>
