--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <p></p>
 <div id="widget2"></div>
-<!-- <script>
+<script>
     function notification(event) {
         console.log("Notification", event);
     }
@@ -45,9 +45,9 @@
         shortWidgetIds: "widget1",
         geoLocationCallback: notification
     });
-</script> -->
+</script>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
     !function() {
         var $ps_version = window.localStorage && localStorage.getItem("ps_version") || new  Date().getTime(),
         $ps_head = document.getElementsByTagName("head")[0] || document.documentElement,$ps_base_url = '//abs.proxistore.com/',
@@ -59,7 +59,7 @@
     })
     , $ps_head.insertBefore($ps_script,$ps_head.firstChild);
   }();
-</script>
+</script> -->
 
 
 <!-- BODY CODE -->
